// user.proto
syntax = "proto3";
option java_package = "com.xiahou.yu.paasmetacore.protobuf";
import "enums.proto";
option java_outer_classname = "MessageProto";

message User {
  int32 age = 1;
  string name = 2;
  SexEnum sex = 3;
  map<int32, GradeInfo> grade = 4;
  repeated ParentUser parent = 5;
}

message GradeInfo {
  double score = 1;
  int32 rank = 2;
}

message ParentUser {
  string relation = 1;
  string tel = 2;
}